--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@u-wave/react-vimeo": "^0.9.10",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
