--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
