--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^10.16.16",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-aria-components": "^1.10.1",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
