--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
